add image pager sample

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity
             android:name=".ImageViewerActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ImagePagerActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
